[theme-updates] - install focus-trap-js and update npm lock - install teaser padding to prevent layout shift on images

--- a/web/themes/pippip/assets/sass/organisms/_teaser.scss
+++ b/web/themes/pippip/assets/sass/organisms/_teaser.scss
@@ -28,6 +28,28 @@
       transition: var(--transition);
     }
 
+    picture {
+      &:after {
+        padding-bottom: 81%;
+      }
+
+      img {
+        &.lazy {
+          content: "";
+          position: relative;
+          display: block;
+          padding-bottom: 81%;
+
+          &.loaded {
+            padding-bottom: 0;
+          }
+          &.error {
+            padding-bottom: 81%;
+          }
+        }
+      }
+    }
+
     &:hover {
       img {
         opacity: 0.6;
